--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
 
         <div class="drone-grid">
             {% for drone in location.beschikbare_drones %}
-                <div class="drone-card" onclick="window.location.href='{{ url_for('routes.reserveer', location_id=location.id, drone_id=drone['ID']) }}'">
+                <div class="drone-card" onclick="window.location.href='{{ url_for('routes.reserveer', location_id=location.id, drone_id=drone.id) }}'">
                     <div class="drone-header">
                         <h3>Drone #{{ drone.id }}</h3>
                         <span class="drone-id">Locatie: {{ location.naam }}</span>
