--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="admin-container">
 <div class="admin-header">
-        <a href="{{ url_for('routes.index') }}" class="back-button">← Terug</a>
+    <a href="{{ url_for('routes.index') }}" class="button">Home</a>
         <h2 class="admin-title">Admin Paneel</h2>
     </div>
     <div class="admin-grid">
